--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "13.2.4",
     "next-i18next": "^13.2.2",
     "openai": "^3.2.1",
-    "@vercel/analytics":""0.1.11",
+    "@vercel/analytics":"0.1.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
